<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:weightSum="6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <ImageView
            android:id="@+id/appbar1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:paddingStart="20dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/appbar1_text"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/appbar1"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="@string/team_generate"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/appbar1_text"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/border_all_directions_with_radius"
                android:text="@string/team_manage"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_alignBottom="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="#CDCDCD"/>

    <LinearLayout
        android:id="@+id/lobby_nav"
        android:layout_weight="1"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/top_nav">

        <LinearLayout
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_open_in_new_18"
                android:background="@drawable/border_right_side"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:text="@string/nav_to_team_create"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:paddingTop="6dp"
                    android:paddingLeft="20dp"
                    android:text="@string/nav_to_team_create_description"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/border_top_bottom_side">

            <ImageView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_login_18"
                android:background="@drawable/border_right_side"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:text="@string/nav_to_team_join"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:paddingTop="6dp"
                    android:paddingLeft="20dp"
                    android:text="@string/nav_to_team_join_description"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_favorite_border_18"
                android:background="@drawable/border_right_side"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:text="@string/nav_to_team_confirm"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:paddingTop="6dp"
                    android:paddingLeft="20dp"
                    android:text="@string/nav_to_team_confirm_description"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_alignBottom="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="#CDCDCD"/>

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_weight="5"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_weight="1.5"
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_home_24"
                android:layout_gravity="center"/>

            <TextView
                android:layout_weight="2"
                android:paddingTop="1.6dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bottom_nav_first_label"
                android:textSize="12sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border_left_right_side">

            <ImageView
                android:layout_weight="1.5"
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_people_24"
                android:layout_gravity="center"/>

            <TextView
                android:layout_weight="2"
                android:paddingTop="1.6dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bottom_nav_second_label"
                android:textSize="12sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_weight="1.5"
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_notifications_24"
                android:layout_gravity="center"/>

            <TextView
                android:layout_weight="2"
                android:paddingTop="1.6dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bottom_nav_third_label"
                android:textSize="12sp"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>