<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/orange_main">

        <ImageView
            android:id="@+id/appbar1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:paddingStart="20dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/appbar1_text"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/appbar1"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="@string/team_search_title"
            android:textSize="20sp"
            android:textColor="#6E6E6E"/>

    </RelativeLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/top_nav"
        app:dividerColor="#CDCDCD" />

    <!-- 검색바 놓는 자리 -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border_all_directions_with_radius"
        android:backgroundTint="#F3F3F3"
        android:backgroundTintMode="multiply"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:gravity="center|left"
            android:text="@string/team_search_bar_placeholder"
            android:textSize="18sp"
            android:textColor="#989898"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_all_directions_with_radius"
            android:backgroundTint="@color/orange_base"
            android:backgroundTintMode="multiply">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_search_24"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/top_nav"
        app:dividerColor="#CDCDCD" />

    <!-- 검색 결과 - 개수 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/team_search_result_figure"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/top_nav"
        app:dividerColor="#CDCDCD" />

    <!-- 검색 결과 - 목록 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </ScrollView>

</LinearLayout>