<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:weightSum="9"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="75dp">

    <ImageView
        android:id="@+id/appbar1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:paddingStart="20dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/appbar1_text"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/appbar1"
        android:gravity="left|center"
        android:paddingLeft="10dp"
        android:text="@string/team_manage"
        android:textSize="24sp"
        android:textStyle="bold" />

    </RelativeLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_alignBottom="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="#CDCDCD"/>

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/team_create_name"
            android:textSize="20dp"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/team_create_name"
            android:textSize="20dp"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/team_create_name"
            android:textSize="20dp"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/team_create_name"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_sum="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="30dp"
                    android:src="@drawable/ic_baseline_check_24"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:text="@string/btn_team_create_confirm"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_sum="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="30dp"
                    android:src="@drawable/ic_baseline_check_24"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:text="@string/btn_team_create_confirm"
                    android:textSize="20dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>