<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6">

    <RelativeLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#FFB74D">

        <ImageView
            android:id="@+id/appbar1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:paddingStart="20dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/appbar1_text"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/appbar1"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="@string/team_manage"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_toRightOf="@id/appbar1_text"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/border_all_directions_with_radius"
                android:backgroundTint="#FFD08C"
                android:text="@string/team_generate"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/top_nav"
        app:dividerColor="#CDCDCD" />

    <RelativeLayout
        android:id="@+id/lobby_nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/team_figure_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="15dp"
            android:paddingTop="12dp">

            <!-- 현재 참여중인 팀의 숫자를 표시하는 뷰로, 텍스트 부분에는 팀 숫자가 표시된다. -->
            <TextView
                android:id="@+id/team_figure"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="2dp"
                android:text="@string/num_participated_team_now"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/team_figure"
                android:paddingTop="2dp"
                android:text="9"
                android:textColor="#FF9D0D"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/team_figure"
                android:layout_alignBottom="@+id/team_figure"
                app:dividerColor="#CDCDCD" />

        </RelativeLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/center_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_figure_title"
            app:dividerColor="#CDCDCD" />

        <!-- 활동중인 팀 목록 보여주기 -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/center_divider">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </ScrollView>


    </RelativeLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/top_nav"
        app:dividerColor="#CDCDCD" />

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:paddingTop="4dp"
                android:src="@drawable/ic_baseline_home_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingTop="1.6dp"
                android:text="홈"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_left_right_side"
            android:orientation="vertical"
            android:weightSum="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:paddingTop="4dp"
                android:src="@drawable/ic_baseline_people_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingTop="1.6dp"
                android:text="팀"
                android:textAlignment="center"
                android:textSize="12sp"
                android:foregroundTint="#FF9D0D"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:paddingTop="4dp"
                android:src="@drawable/ic_baseline_notifications_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingTop="1.6dp"
                android:text="알림"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>